= BinData Changelog

== Version 1.4.1 (2011-xx-xx)

* Added :default option for Choices.

== Version 1.4.0 (2011-06-14)

* Record#snapshot now returns fields in order.
* Removed the need to call #register_self in subclasses.
* Wrapper is now deprecated.  Use subclassing instead.
* Updated license to mimic changes to the Ruby License.
* Refactoring to reduce memory usage.

== Version 1.3.1 (2011-01-25)

* Fixed file permissions problem.

== Version 1.3.0 (2011-01-25)

* BinData objects can now assign values when instantiating.
* Improved support for bit-based alignment.
* Updated reference manual.
* Added examples for declaring recursive structures.
* Objects deriving from BinData::Base should no longer override #initialize.
* Added BinData::Base(#new, #initialize_instance) to speed up
  instantiation of multiple objects.
* Updated specs to rspec-1.3.0
* BinData::Struct.hide now expects symbols instead of strings.

== Version 1.2.2 (2010-12-14)

* Added Base.bindata_name method.
* Removed Base#done_read to reduce memory usage and cpu usage.
* Derived classes should now use do_read et al, instead of _do_read.
* Added predefinition of record fields to improve speed.
* Made compatible with ruby 1.9.2.  Thanks to Andrew Watts.

== Version 1.2.1 (2010-07-20)

* Updated specs to be compatible with ruby 1.9.1

== Version 1.2.0 (2010-07-09)

* Deprecated Base#register. Use #register_self or #register_subclasses instead.
* Syntax improvement.  Array, Structs and Choices can now use blocks to
  specify fields.
* Reduced startup time (suggestion courtesy of Mike Ryan).

== Version 1.1.0 (2009-11-24)

* Allow anonymous fields in Records and Primitives.
* Add the ability to skip over unused data.
* Allow Records, Primitives and Wrappers to be derived from.
* Classes for integers are now defined on demand.

== Version 1.0.0 (2009-09-13)

* Is now compatible with Ruby 1.9
* Added reference manual.
* Added #rel_offset to Base.
* Removed support for deprecated functionality.
