@@ -358,6 +358,11 @@
                     .acc-section
                       .acc-content
                   %li
+                    %a{ :href => "#determining_stream_length" }
+                      Determining stream length
+                    .acc-section
+                      .acc-content
+                  %li
                     %a{ :href => "#bitaligned_records" }
                       Bit-aligned Records
                     .acc-section
